--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FoodDiliveryApp">
         <activity
+            android:name=".IdentityActivity"
+            android:exported="false" />
+        <activity
             android:name=".MymenuActivity"
             android:exported="false" />
         <activity
